Adding tests and refactoring for testability.

--- a/timelinejs/templates/timelinejs/timelines.html
+++ b/timelinejs/templates/timelinejs/timelines.html
@@ -1,4 +1,3 @@
-{% extends "base.html" %}
 {% load future %}
 
 {% block title %}Timelines{% endblock %}
@@ -24,7 +23,7 @@
     <h2>Page Actions</h2>
     {% if user.is_authenticated %}
     <ul class="button-list">
-        <li><a class="btn btn-primary" href="{% url "admin:timeline_timeline_add" %}">Create New Timeline</a></li>
+        <li><a class="btn btn-primary" href="{% url "admin:timelinejs_timeline_add" %}">Create New Timeline</a></li>
     </ul>
     {% endif %}
 </div>
