--- a/timelinejs/templates/timelinejs/import_timeline.html
+++ b/timelinejs/templates/timelinejs/import_timeline.html
@@ -2,7 +2,7 @@
 {% block title %}Import Timeline from Google Spreadsheet {% endblock %}
 
 {% block content %}
-<div class="left-edge">
+<div>
     <h1>Import Timeline from a Google Spreadsheet</h1>
 
     <form action="." method="POST">{% csrf_token %}
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block sidebar %}
-<div class="left-edge">
+<div>
     <h3>No Actions</h3>
 </div>
 {% endblock %}
